fix(admin): save starting stock when creating products
